# ParallelPrograming

./: CMakeLists.txt  FinalExamPoints.md  README.md  main.c  project_configure.csv
SDNN/: analyse.py  main.c  mmiohighlevel.h  project_configure.csv
SDNN/template/: arch1  init
cholesky/: main.c  project_configure.csv  test.py
cholesky/template/: version_1  version_2
finalproject-SDNN/: main.c
include/: OmpPrimitive.h  OmpVectorAdd.h  Primitive.h  VectorAdd.h  basic.h  exception.h
template/: OmpPrimitive.md  OmpVectorAdd.md  Primitive.md  VectorAdd.md  main  vecadd
